Bug 1829736 - Optimize FunApply when the second argument is null or undefined. r=iain

In this case we can just call the target function with the provided `this` value
and no arguments.

This gets rid of about 10-15% of calls to `js::fun_apply` on Speedometer, mostly
from the Angular test.

Differential Revision: https://phabricator.services.mozilla.com/D176434